--- a/public_html/scss/workflow.scss
+++ b/public_html/scss/workflow.scss
@@ -3,7 +3,105 @@
     Author     : Michel Koks <michel@nt2lab.nl>
 */
 
-@import "../agenda/appointment/appointment",
-        "../agenda/calender/calender",
-        "../agenda/date/date",
-        "../agenda/week/week";
+@import "vendor/normalize/normalize";
+
+$appWrapBg:         white;
+$windowColor:       grey;
+$windowBg:          #f2f2f2;
+$windowInner:       grey;
+$windowColorHover: #012841;
+
+html {
+    
+}
+
+body {
+    font-size: 62.5%;
+}
+
+body > h1 {
+    font-family: Limelight, italic;
+    //max-width: 1200px;
+    padding: 0.5rem 2rem;
+    font-size: 4rem;
+    font-weight: bold;
+    box-sizing: border-box;
+    margin: auto;
+    color: grey;
+    cursor: pointer;
+    &:hover {
+        .hoverPath {
+            text-decoration: none;
+        }
+    }
+}
+
+[role="grid"] {
+    width: 100%;
+    display: flex;
+    [role="navigation"] {
+        width: 20rem;
+        h1 {
+            margin: 0;
+            font-family: Limelight, italic;
+            font-size: 3rem;
+            font-weight: bold;
+            border-bottom: 0.5rem solid $windowColor;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: right;
+            padding: 1rem;
+            position: relative;
+            border-right: 0.5rem solid grey;
+        }
+    }
+    [role="main"] {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        background-color: orange;
+        > div:first-child {
+            height: 3rem;
+            border-top: 0.5rem solid grey;
+        }
+    }
+}
+
+ul {
+    width: 100%;
+    list-style:none;
+    padding-left:0;
+    li {
+        width: 17rem;
+        height: 1.5rem;
+        background-color: blue;
+        margin-top: 1.7rem;
+    }
+}
+
+[role="menubar"] {
+    width: 100%;
+    height: 4rem;
+    //border-bottom: 0.5rem solid $windowColor;
+}
+
+.hoverWorkflow {
+    &:hover {
+        color: #012841;
+        text-decoration: underline;
+    }
+}
+
+.hoverSlash {
+    font-size: 2rem;
+}
+
+.hoverPath {
+    text-decoration: underline;
+}
+
+@import "../apps/index/index",
+        "../apps/agenda/appointment/appointment",
+        "../apps/agenda/calender/calender",
+        "../apps/agenda/date/date",
+        "../apps/agenda/week/week";
