--- a/public_html/apps/index/index.scss
+++ b/public_html/apps/index/index.scss
@@ -3,24 +3,14 @@
     Author     : Michel Koks <michel@nt2lab.nl>
 */
 
-body section {
-    background-color: $appWrapBg;
-}
-
 #appWrap {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    min-width: 23rem;
-    //max-width: 1200px;
-    margin: auto;
+    width: 98%;
+    margin: 5% 1%;
 }
 
 .appItem {
     width: 100%;
-    max-width: 22rem;
-    margin: 0 0.5rem 2rem 0.5rem;
-    //flex: 1;
+    margin-bottom: 2rem;
     .ovalWrap, .oval, .appWindowLeftHead, .appWindowLeftBody, .appWindowRightLine, .appWindowRightShortLine, .appWindowAgendaBlock, .appWindowRightThinLine, .appWindowRightThinShortLine, .appWindowPuzzle, .appWindowPuzzle:after {
         background-color: $windowColor;
         transition: background-color 0.5s linear;
@@ -33,39 +23,23 @@ body section {
         color: $windowColor;
         transition: color 0.5s linear;
     }
-    &:hover {
-        .ovalWrap, .oval, .appWindowLeftHead, .appWindowLeftBody, .appWindowRightLine, .appWindowRightShortLine, .appWindowAgendaBlock, .appWindowRightThinLine, .appWindowRightThinShortLine, .appWindowPuzzle, .appWindowPuzzle:after {
-            background-color: $windowColorHover;
-            transition: background-color 0.5ss linear;
-        }
-        .appWindow, .appWindowLeftCheckbox {
-            border-color: $windowColorHover;
-            transition: border-color 0.5s linear;
-        }
-        .appWindowRightShortLine span {
-            color: $windowColorHover;
-            transition: color 0.5s linear;
-        }
-        i {
-            color: green;
-            transition: color 0.5s linear;
-        }
-    }
 }
 
 .ovalWrap {
     width: 100%;
-    height: 4rem;
+    height: 0;
+    padding-bottom: 15%;
     display: flex;
     box-sizing: border-box;
 }
 
 .oval {
     position: relative;
-    top: -20px;
+    top: -50%;
     width: 5%;
-    height: 3rem;
-    border-radius: 20px;
+    height: 0;
+    padding-bottom: 10%;
+    border-radius: 2rem;
     margin: auto;
     border: 0.5rem solid $appWrapBg;
 }
@@ -73,7 +47,8 @@ body section {
 .appWindow {
     display: flex;
     width: 100%;
-    height: 15rem;
+    height: 0;
+    padding-bottom: 60%;
     box-sizing: border-box;
     border-width: 0.5rem;
     border-style: solid;
@@ -82,40 +57,54 @@ body section {
 
 .appWindowLeft {
     flex: 1;
+    box-sizing: border-box;
 }
 
 .appWindowLeftHead {
-    width: 5rem;
-    height: 5rem;
-    box-sizing: border-box;
-    border-radius: 5rem;
-    margin: 3rem auto;
+    width: 60%;
+    height: 0;
+    padding-bottom: 60%;
+    background-color: red;
+    border-radius: 60%;
+    margin: 35% auto;
 }
 
 .appWindowLeftBody {
-    height: 4rem;
-    width: 8rem;
-    border-radius: 8rem 8rem 0 0;
-    margin: -3.5rem auto;
+    width: 80%;
+    height: 0;
+    padding-bottom: 40%;
+    border-radius: 80% 80% 0 0;
+    margin: -40% auto;
+}
+
+.appWindowRight, .appWindowRightLarge {
+    box-sizing: border-box;
+    .appWindowRightLine:first-child {
+        margin-top: 38%;
+    }
 }
 
 .appWindowRight {
     flex: 1.4;
-    box-sizing: border-box;
-    padding: 1rem 0.5rem;
-    .appWindowRightLine:first-child {
-        margin-top: 3rem;
-    }
+}
+
+.appWindowRightLarge {
+    flex: 3;
 }
 
 .appWindowRightLine, .appWindowRightShortLine {
-    height: 2rem;
+    height: 0;
     border-radius: 2rem;
-    margin: 0.5rem;
+    margin: 4% 0;
+    padding-bottom: 15%;
 }
 
 .appWindowRightLine, .appWindowRightThinShortLine {
     width: 90%;
+}
+
+.appWindowRightThinShortLine {
+    width: 80%;
 }
 
 .appWindowRightShortLine {
@@ -123,40 +112,49 @@ body section {
     > span {
         position: relative;
         display: inline-block;
-        width: 3rem;
-        height: 3rem;
-        margin-top: -0.5rem;
+        width: 25%;
+        height: 0;
+        //padding: 0 auto 22% auto;
+        padding-bottom: 22%;
+        //background-color: red;
+        //margin-top: -0.5rem;
         background-color: $windowBg;
         border-radius: 2rem;
         left: 50%;
         > span {
-            font-size: 2.5rem;
+            font-size: 1.8rem;
+            display: inline-block;
+            //background-color: green;
             font-weight: bold;
-            line-height: 2.5rem;
-            padding-left: 0.35rem;
+            line-height: 1.8rem;
+            padding: 0 10%;
+            margin: auto;
         }
     }
 }
 
 .appWindowRightThinLine, .appWindowRightThinShortLine {
-    height: 1rem;
+    height: 0;
+    padding-bottom: 6%;
     border-radius: 1rem;
-    margin: 0.3rem;
+    margin: 5% 5%;
 }
 
 .appWindowRightThinShortLine {
-    margin-bottom: 2.2rem;
+    margin-bottom: 10%;
 }
 
 .appWindowLeftCheckbox {
-    width: 3rem;
-    height: 3rem;
+    width: 52%;
+    height: 0;
+    padding-bottom: calc(100% * 2 / 3 - 1rem);
     border-style: solid;
-    border-width: 0.5rem;
-    margin: 0.5rem auto;
+    border-width: 0.4rem;
+    margin: 10% auto;
     i {
         color: $windowColor;
         transition: color 0.5s linear;
+        -webkit-transform: scale(1);
     }
 }
 
@@ -166,9 +164,10 @@ body section {
 }
 
 .appWindowAgendaBlock {
-    width: 70%;
-    height: 3rem;
-    margin: 1rem auto;
+    width: 80%;
+    height: 0;
+    padding-bottom: 64%;
+    margin: 15% auto;
 }
 
 .appWindowWhole {
